# mk

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  shell.nix
.github/workflows/: ci.yml  release.yml
.makefiles/: common.mk
docs/: 01-automatic-help.md  02-prelude-and-epilogue.md  03-includes.md  README.md
scripts/: hash.py  install.sh
src/: cli.rs  help.rs  lib.rs  main.rs  makefile.rs
subfolder/: Makefile
tests/: test_cli.rs  test_integration.rs
tests/common/: mod.rs
tests/common/fixtures/: cwd.mk  docs.mk  envvars.mk  include.mk  nodocs.mk  repeats.mk  test.mk
tests/snapshots/: test_cli__can_execute_make_with_valid_syntax_repeated_targets.snap  test_cli__can_parse_help_from_includes.snap  test_cli__can_run_included_commands_from_a_subfolder.snap  test_cli__knows_its_calling_current_working_directory.snap  test_cli__prints_minimal_help_if_makefile_is_empty_and_h_flag_is_given.snap  test_cli__prints_minimal_help_if_makefile_is_empty_and_help_flag_is_given.snap  test_cli__prints_minimal_help_if_makefile_is_empty_and_no_args_given.snap  test_cli__shows_help_with_documentation.snap  test_cli__shows_make_error_if_an_invalid_target_is_used.snap  test_cli__uses_env_vars_passed_as_arguments.snap  test_cli__uses_env_vars_preceding_the_command.snap
