[package]
name = "mk"
version = "0.1.0"
description = "An experimental command-line wrapper for GNU Make."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["cargo", "string"] }
env_logger = "0.11.2"
log = "0.4.20"
regex = "1.10.3"
